# autometrics-async-trait-repro

./: Cargo.toml  README.md
src/: main.rs
